[workspace]
resolver = "2"

members = [
    "categories/rust-book/*",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Jakub Narolewski <izowiuzemail.com>"]
license = "MIT"
repository = "https://github.com/izowiuz/sandbox-rust"
description = "Sandbox for Rust stuff"
readme = "README.md"
categories = ["rust-patterns"]
keywords = ["rust", "learning", "sandbox"]

[workspace.dependencies]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
