[package]
name = "guessing-game"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
rand = "0.9.2"

[lints]
workspace = true
